Freestyle will not render edges selected by Edge Type: Material Boundary, if the materials are different, but look identical. #42351

Closed
opened 2014-10-22 19:09:03 +02:00 by Bart Robinson · 7 comments

System Information
Microsoft Windows 7 Ultimate Service Pack 1 64 bit and NVIDIA Quadro FX 3450 (irrelevant, using Blender Internal renderer on CPU)

Blender Version
Broken: Version:2.72a Date: 2014-10-15 15:23 Hash:73f5a41
Worked: Haven't seen it work.

Short description of error
Freestyle will not render edges selected by Edge Type: Material Boundary, if the materials are different, but look identical.

Exact steps for others to reproduce the error

  1. Open Blender (keep default Cube scene, leave Cube selected).
  2. Turn on Freestyle rendering in Render Properties.
  3. Switch to Render Layers Properties
  4. In Freestyle Line Set panel, Edge Types, uncheck: Silhouette, Border, Crease.
  5. In Freestyle Line Set panel, Edge Types, check: Material Boundary
  6. Enter edit mode (on already selected Cube object).
  7. Switch to Face Select mode.
  8. Deselect all faces.
  9. Select one face.
  10. Switch to Material Properties.
  11. Add a new material slot.
  12. Browse a material to be linked and select "Material", the material already applied to the other faces.
  13. Make it a single user material, (used to be done by clicking on the "2", but seems you now have to click "+" so you get a duplicate and identical (settings-wise, but different material). Name is now most likely "Material.001".
  14. Click Assign, to assign "Material.001" to the selected face.
  15. Return to Object mode.
  16. Render image
  17. No edge will be rendered around the material boundary.

Tweak to "push" it to work:
Adjust a Color or Freestyle Line Priority on one of the materials. All of a sudden the material boundary edge is rendered.

Issues:
Nothing in the Blender documentation or Blender setting names or tooltips notes that the material has to look different for the material boundary edge to be rendered. A material boundary setting indicates the material needs to BE a different material, not LOOK like a different material or have a different color.

File also posted to: http://www.pasteall.org/blend/32287

Blender2.72AFreestyleMaterialBoundaryBug.blend

**System Information** Microsoft Windows 7 Ultimate Service Pack 1 64 bit and NVIDIA Quadro FX 3450 (irrelevant, using Blender Internal renderer on CPU) **Blender Version** Broken: Version:2.72a Date: 2014-10-15 15:23 Hash:73f5a41 Worked: Haven't seen it work. **Short description of error** Freestyle will not render edges selected by Edge Type: Material Boundary, if the materials are different, but look identical. **Exact steps for others to reproduce the error** 01. Open Blender (keep default Cube scene, leave Cube selected). 02. Turn on Freestyle rendering in Render Properties. 03. Switch to Render Layers Properties 04. In Freestyle Line Set panel, Edge Types, uncheck: Silhouette, Border, Crease. 05. In Freestyle Line Set panel, Edge Types, check: Material Boundary 06. Enter edit mode (on already selected Cube object). 07. Switch to Face Select mode. 08. Deselect all faces. 09. Select one face. 10. Switch to Material Properties. 11. Add a new material slot. 12. Browse a material to be linked and select "Material", the material already applied to the other faces. 13. Make it a single user material, (used to be done by clicking on the "2", but seems you now have to click "+" so you get a duplicate and identical (settings-wise, but different material). Name is now most likely "Material.001". 14. Click Assign, to assign "Material.001" to the selected face. 15. Return to Object mode. 16. Render image 17. No edge will be rendered around the material boundary. Tweak to "push" it to work: Adjust a Color or Freestyle Line Priority on one of the materials. All of a sudden the material boundary edge is rendered. Issues: Nothing in the Blender documentation or Blender setting names or tooltips notes that the material has to look different for the material boundary edge to be rendered. A material boundary setting indicates the material needs to BE a different material, not LOOK like a different material or have a different color. File also posted to: http://www.pasteall.org/blend/32287 [Blender2.72AFreestyleMaterialBoundaryBug.blend](https://archive.blender.org/developer/F119185/Blender2.72AFreestyleMaterialBoundaryBug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bartrobinson

Added subscriber: @bartrobinson
Tamito Kajiyama was assigned by Bastien Montagne 2014-10-22 22:07:04 +02:00

This issue was referenced by a3e3ac03ff

This issue was referenced by a3e3ac03ff3c75ae28cce391204fffdf31391760

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a3e3ac03ff.

Closed by commit a3e3ac03ff.

Thanks a lot for the problem report!

Thanks a lot for the problem report!
Author

Nice! Thank you for the awesome renderer and quick fix!

Nice! Thank you for the awesome renderer and quick fix!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42351
No description provided.